--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.16.3",
     "mongoose": "^5.0.10",
     "multer": "^1.3.0",
+    "nodemailer": "^4.6.3",
     "nodemon": "^1.17.1",
     "path": "^0.12.7"
   },
